[package]
name = "db_merge_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
# MySQL/MariaDB driver
mysql = "24.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Config file parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Progress bar
indicatif = "0.17"

# JSON parsing (cho clan members)
serde_json = "1.0"

# Date/time
chrono = "0.4"

# Colors cho terminal
colored = "2.1"
